<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@drawable/initial" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sorts_mill_goudy"
            android:text="@string/kabarangay"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-28dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp"
            android:layout_marginBottom="0dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Welcome Back"
                android:fontFamily="@font/sora"
                android:textColor="@color/primary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:fontFamily="@font/sora"
                android:drawablePadding="8dp"
                android:textSize="22sp"
                android:textColor="@color/primary"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/email_icon" />

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="@font/sora"
                android:textSize="15sp"
                android:alpha="0.5"
                android:textColorHint="@color/primary"
                android:drawableEnd="@drawable/done_icon"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:fontFamily="@font/sora"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/password1"
                android:textSize="22sp"
                android:textColor="@color/primary"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/lock_icon" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/password_icon"
                android:hint="@string/password"
                android:textSize="15sp"
                android:fontFamily="@font/sora"
                android:inputType="textPassword"
                android:alpha="0.5"
                android:textColorHint="@color/primary"
                android:autofillHints="" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sora"
                    android:text="@string/remember_me"
                    android:textColor="@color/primary"
                    android:layout_centerVertical="true"
                    android:alpha="1"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/sora_extrabold"
                    android:text="@string/forgot_password"
                    android:textAllCaps="false"
                    android:background="@null"
                    android:textColor="#C67C4E"
                    tools:ignore="RelativeOverlap" />


            </RelativeLayout>


            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/round_style"
                android:fontFamily="@font/sora"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/orange_accent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't have an account?"
                    android:textSize="14sp"
                    android:fontFamily="@font/sora"
                    android:textColor="@color/primary"/>

                <TextView
                    android:id="@+id/account_notexist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sora_extrabold"
                    android:text="Sign Up"
                    android:textSize="14sp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/orange_accent" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>