<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@drawable/initial" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sorts_mill_goudy"
            android:text="@string/kabarangay"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-28dp"
        app:cardCornerRadius="28dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:orientation="vertical"
            android:padding="28dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sora"
                android:text="Welcome"
                android:textColor="@color/primary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:fontFamily="@font/sora"
                android:text="@string/email"
                android:textColor="@color/primary"
                android:textSize="22sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/email_icon" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:autofillHints=""
                android:drawableEnd="@drawable/done_icon"
                android:fontFamily="@font/sora"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="@color/primary"
                android:textSize="15sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:fontFamily="@font/sora"
                android:text="@string/password1"
                android:textColor="@color/primary"
                android:textSize="22sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/lock_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:autofillHints=""
                    android:fontFamily="@font/sora"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColorHint="@color/primary"
                    android:textSize="15sp"
                    app:passwordToggleEnabled="true"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/round_style"
                android:fontFamily="@font/sora"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/orange_accent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sora"
                    android:text="Already have an account?"
                    android:textColor="@color/primary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/account_exists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/sora_extrabold"
                    android:text="Sign In"
                    android:textColor="@color/orange_accent" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>